--- a/gallery.html
+++ b/gallery.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="info-chef">
                     <h3>Alaa</h3>
-                    <p>Patissier</p>
+                    <p>Patisserie</p>
                 </div>
             </div>
             <div class="box-chef">
